(Dis donc emacs, ceci est du -*-text-*- !)

		      LIST OF CHANGES
		      ===============

  o options -dvi, -ps and -html to produce DVI, PS and HTML
  o page style with headings (thanks to Ralf Treinen)
  o insertion into LaTeX preamble with option -p and (*p
  o macros \ocwbegincode and \ocwendcode before and after code pieces
    (no more use of \codeline and \endcodeline)

version 0.9, 18/12/2000
=======================
  o support for lex and yacc files (-impl option deprecated on these files)
  o when not in WEB style, index is by pages by default
  o noweb style is used if no sectioning command (*s at all
    so that ocamlweb can be used naively as a pretty-printer
  o option -latex-sects renamed into -noweb
  o bytecode compilation if no ocamlopt available
  o adequacy to ocaml 3.00 parser; labels are now indexed
  o installation: $(BINDIR) and $(TEXDIR) created if they don't exist
  o a comment in the LaTeX file now indicates that it is a generated
    file and gives the command line

version 0.8, 02/06/2000
======================= 
  o configuration with autoconf (thanks to Luc MAZARDO)
  o location (file + character) in error message for unterminated comments
  o index entries are now discriminated by their types (value,
    constructor, type, module, etc.)
  o nicer quotes in identifiers
  o pretty-printing of constants (hex, oct and bin integers, floats)
  o option -s, --short (no titles for files)
  o pretty-printing for == and !=
  o pretty underscores in identifiers (by redefinition of \_) 

version 0.7, 31/01/2000
=======================
  o support of .mll and .mly files using the --impl option 
    (Christian Rinderknecht); but still no indexing for these files.
  o fixed bugs in identifiers pretty-printing (Christian Rinderknecht)
  o fixed bug of code indentation inside item-like environments
  o renaming of \comment (resp. \endcomment) in \ocwcomment
    (resp. \ocwendcomment) to avoid a clash with Hevea own macros

version 0.6, 21/10/99