@@ -12,6 +12,8 @@
 
 (* $Id$ *)
 
+open Format
+
 type t =                             (* A is all *)
   | Comment of string                (* C *)
   | Partial_application              (* F *)
@@ -23,8 +25,15 @@ type t =                             (* A is all *)
   | Other of string                  (* X *)
 ;;
 
-val parse_options : string -> unit;;
+val parse_options : iserror:bool -> string -> unit;;
 
 val is_active : t -> bool;;
+val is_error : t -> bool;;
 
-val message : t -> string;;
+val print : formatter -> t -> int;;
+  (* returns the number of newlines in the printed string *)
+
+
+exception Errors of int;;
+
+val check_fatal : unit -> unit;;
