@@ -2,3 +2,5 @@ ocamlweb.tex
 ocamlweb.html
 ocamlweb.ps
 test.tex
+test.html
+test.haux
