@@ -83,3 +83,4 @@ let test_pat = function
   | BB -> foo 2
   | CC -> C.f 3
 
+(*s Test escaped dollar in comments: \$ *)
